fixing spacing between elements

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -78,8 +78,9 @@ body {
   color: #004080;
   font-size: 12px; }
 
-.pt-bg {
-  padding-top: 32px; }
+@media only screen and (min-width: 1024px) {
+  .pt-bg {
+    padding-top: 32px; } }
 
 /* Grid flex-box*/
 .col {
@@ -219,8 +220,6 @@ body {
   background-color: #fff;
   padding: 16px;
   border: 1px solid #f2f2f2; }
-  .content_tab2 .pt-bg {
-    padding-top: 0; }
   .content_tab2 .content_tab2__block {
     position: relative;
     padding-bottom: 16px; }
